--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
+/* Reset some default browser styling */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.left-column {
+  flex: 1;
+  padding: 20px;
+  background-color: #E8DAB9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.main-content {
+  flex: 2;
+  padding: 20px;
+  background-color: #FAF3E0;
+  margin-left: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.resume-button {
+  display: inline-block;
+  padding: 10px 20px;
+  color: #4B3F2F;
+  background-color: #E8DAB9;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.resume-button:hover {
+  background-color: #D2C3A3;
+  cursor: pointer;
+}
+
+.books-link {
+  color: #4B3F2F;
+  /* Deep brown color to match your theme */
+  text-decoration: underline;
+  /* Underline to indicate it's a clickable link */
+  margin-top: 10px;
+  /* Spacing from previous elements */
+  display: inline-block;
+  /* Allows for margin-top */
+  transition: color 0.3s ease;
+  /* Color transition for hover effect */
+}
+
+.books-link:hover {
+  color: #32251B;
+  /* Slightly darker color for hover */
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .left-column {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .left-column>div {
+    width: 48%;
+  }
+
+  .main-content {
+    margin-left: 0;
+    margin-bottom: 20px;
   }
 }
