--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,18 @@
   margin: 0;
   padding: 0;
 }
-body {
 
+body,
+html {
+  height: 100%;
+  /* Full height to allow for centering */
+}
+body {
+  display: flex;
+  justify-content: center;
+  /* Center horizontally */
+  align-items: center;
+  /* Center vertically */
   font-family: 'Arial', sans-serif;
   background-color: #FAF3E0;
   color: #4B3F2F;
