fixed css on phone

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@
 .container {
   display: flex;
   max-width: 1200px;
-  margin: auto;
+  width: 100%;
+  /* Makes sure the container takes the full width */
+  margin: 0;
+  /* Remove auto margin */
   padding: 20px;
   box-shadow: 0 0 10px #0000001a;
+  flex-wrap: wrap;
+  /* Allows content to wrap on smaller screens */
 }
-
 .left-column {
   flex: 1;
   padding: 20px;
@@ -95,6 +99,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    align-items: flex-start;
+    /* Aligns content to the top on mobile */
+  }
+
   .container {
     flex-direction: column;
     padding: 10px;
@@ -110,7 +119,8 @@
   }
 
   .left-column>div {
-    width: 48%;
+    width: 100%;
+    /* Allows content to stack vertically on mobile */
   }
 
   .main-content {
